# KDT_RobotTracking

./: does not warrant normal operation.txt  package.xml  robot_tracking_world.sdf  setup.cfg  setup.py
KDT_RobotTracking/: calibration_data.npz  serial_bridge_node.py  tracker_node.py  webcam_node.py
config/: esp_ip.yaml
dashboard/: app.py  index.html
dashboard/static/: script.js  style.css
launch/: RobotTracking_launch.py
tracking_pj/: aruco_detector_node.py  calibration.py
